force-app/main/default/objects/Tylenol__c/Tylenol__c.object-meta.xml
<CustomObject>
    <label>Tylenol</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tylenol</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>