force-app/main/default/objects/Tylenol__c/fields/Accurate_Information_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Accurate_Information_Agreement__c</fullName>
    <label>Accurate Information Agreement</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>