force-app/main/default/objects/Tylenol__c/fields/ADHD_Medication_Brand__c.field-meta.xml
<CustomField>
    <fullName>ADHD_Medication_Brand__c</fullName>
    <label>ADHD Medication Brand</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>