force-app/main/default/objects/Tylenol__c/fields/ADHD_Medication_Dosage__c.field-meta.xml
<CustomField>
    <fullName>ADHD_Medication_Dosage__c</fullName>
    <label>ADHD Medication Dosage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>