force-app/main/default/objects/Tylenol__c/fields/Alternate_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Contact_Number__c</fullName>
    <label>Alternate Contact Number</label>
    <type>Phone</type>
</CustomField>