force-app/main/default/objects/Tylenol__c/fields/Best_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Best_Contact_Number__c</fullName>
    <label>Best Contact Number</label>
    <type>Phone</type>
</CustomField>