force-app/main/default/objects/Tylenol__c/fields/Calling_for_Yoursef_or_Someone_Else__c.field-meta.xml
<CustomField>
    <fullName>Calling_for_Yoursef_or_Someone_Else__c</fullName>
    <label>Calling for Yoursef or Someone Else</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Self</fullName>
            </value>
            <value>
                <fullName>Someone else</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>