force-app/main/default/objects/Tylenol__c/fields/Child_Born_After_Week_26__c.field-meta.xml
<CustomField>
    <fullName>Child_Born_After_Week_26__c</fullName>
    <label>Child Born After Week 26</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Week 25 or before (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>