force-app/main/default/objects/Tylenol__c/fields/Child_Diagnosed_with_ADHD__c.field-meta.xml
<CustomField>
    <fullName>Child_Diagnosed_with_ADHD__c</fullName>
    <label>Child Diagnosed with ADHD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>