force-app/main/default/objects/Tylenol__c/fields/Child_Formally_Diagnosed__c.field-meta.xml
<CustomField>
    <fullName>Child_Formally_Diagnosed__c</fullName>
    <label>Child Formally Diagnosed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADHD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>