force-app/main/default/objects/Tylenol__c/fields/Child_Held_Back_in_School__c.field-meta.xml
<CustomField>
    <fullName>Child_Held_Back_in_School__c</fullName>
    <label>Child Held Back in School</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>