force-app/main/default/objects/Tylenol__c/fields/Child_s_Birth_City__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Birth_City__c</fullName>
    <label>Child&apos;s Birth City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>