force-app/main/default/objects/Tylenol__c/fields/Child_s_Birth_Facility_and_Address__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Birth_Facility_and_Address__c</fullName>
    <description>What is the name of the birth facilities and address where the child was born?</description>
    <label>Child&apos;s Birth Facility and Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>