force-app/main/default/objects/Tylenol__c/fields/Child_s_Current_Age__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Current_Age__c</fullName>
    <label>Child&apos;s Current Age</label>
    <length>255</length>
    <type>Text</type>
</CustomField>