force-app/main/default/objects/Tylenol__c/fields/Child_s_Diagnosis_Date__c.field-meta.xml
<CustomField>
    <fullName>Child_s_Diagnosis_Date__c</fullName>
    <label>Child&apos;s Diagnosis Date</label>
    <type>Date</type>
</CustomField>