force-app/main/default/objects/Tylenol__c/fields/Client_Location_TX_or_MI__c.field-meta.xml
<CustomField>
    <fullName>Client_Location_TX_or_MI__c</fullName>
    <label>Client Location (TX or MI)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>