force-app/main/default/objects/Tylenol__c/fields/Complications_During_Pregnancy__c.field-meta.xml
<CustomField>
    <fullName>Complications_During_Pregnancy__c</fullName>
    <label>Complications During Pregnancy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Gestational diabetes (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>