force-app/main/default/objects/Tylenol__c/fields/Consent_for_Contact_Methods__c.field-meta.xml
<CustomField>
    <fullName>Consent_for_Contact_Methods__c</fullName>
    <label>Consent for Contact Methods</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>