force-app/main/default/objects/Tylenol__c/fields/Date_of_Passing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Passing__c</fullName>
    <label>Date of Passing</label>
    <type>Date</type>
</CustomField>