force-app/main/default/objects/Tylenol__c/fields/Diagnosed_with_Autism_or_ADHD__c.field-meta.xml
<CustomField>
    <fullName>Diagnosed_with_Autism_or_ADHD__c</fullName>
    <label>Diagnosed with Autism or ADHD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>