force-app/main/default/objects/Tylenol__c/fields/Diagnosing_Physician_Hospital_Address__c.field-meta.xml
<CustomField>
    <fullName>Diagnosing_Physician_Hospital_Address__c</fullName>
    <description>What is the name of the diagnosing physician, hospital and address where the child received the diagnosis?</description>
    <label>Diagnosing Physician, Hospital, Address</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>