force-app/main/default/objects/Tylenol__c/fields/Emergency_Contact_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Relationship__c</fullName>
    <label>Emergency Contact Relationship</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>