force-app/main/default/objects/Tylenol__c/fields/Father_s_Age_at_Baby_s_Birth__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Age_at_Baby_s_Birth__c</fullName>
    <label>Father&apos;s Age at Baby&apos;s Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>