force-app/main/default/objects/Tylenol__c/fields/Father_s_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Father_s_Full_Name__c</fullName>
    <label>Father&apos;s Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>