force-app/main/default/objects/Tylenol__c/fields/Frequency_of_Tylenol_Use__c.field-meta.xml
<CustomField>
    <fullName>Frequency_of_Tylenol_Use__c</fullName>
    <description>Approximately how many times did you take Tylenol during the 2nd or 3rd  trimester of your pregnancy?</description>
    <inlineHelpText>Approximately how many times did you take Tylenol during the 2nd or 3rd  trimester of your pregnancy?</inlineHelpText>
    <label>Frequency of Tylenol Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other:</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>