force-app/main/default/objects/Tylenol__c/fields/Generic_Acetaminophen_Store__c.field-meta.xml
<CustomField>
    <fullName>Generic_Acetaminophen_Store__c</fullName>
    <label>Generic Acetaminophen Store</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Walmart</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>