force-app/main/default/objects/Tylenol__c/fields/Has_Power_of_Attorney__c.field-meta.xml
<CustomField>
    <fullName>Has_Power_of_Attorney__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Power of Attorney</label>
    <type>Checkbox</type>
</CustomField>