force-app/main/default/objects/Tylenol__c/fields/Is_Next_of_Kin__c.field-meta.xml
<CustomField>
    <fullName>Is_Next_of_Kin__c</fullName>
    <label>Is Next of Kin</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>