force-app/main/default/objects/Tylenol__c/fields/Is_Person_Deceased__c.field-meta.xml
<CustomField>
    <fullName>Is_Person_Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Person Deceased</label>
    <type>Checkbox</type>
</CustomField>