force-app/main/default/objects/Tylenol__c/fields/Issue_Description_and_Severity__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description_and_Severity__c</fullName>
    <label>Issue Description and Severity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>