force-app/main/default/objects/Tylenol__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Tylenol</relationshipLabel>
    <relationshipName>Tylenol</relationshipName>
    <type>Lookup</type>
</CustomField>