force-app/main/default/objects/Tylenol__c/fields/Other_ADHD_Issues_Concerns__c.field-meta.xml
<CustomField>
    <fullName>Other_ADHD_Issues_Concerns__c</fullName>
    <label>Other ADHD Issues/Concerns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>