force-app/main/default/objects/Tylenol__c/fields/Other_Behavioral_Psychological_Issues__c.field-meta.xml
<CustomField>
    <fullName>Other_Behavioral_Psychological_Issues__c</fullName>
    <label>Other Behavioral/Psychological Issues</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>