force-app/main/default/objects/Tylenol__c/fields/Other_Generic_Acetaminophen_Store__c.field-meta.xml
<CustomField>
    <fullName>Other_Generic_Acetaminophen_Store__c</fullName>
    <label>Other Generic Acetaminophen Store</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>