force-app/main/default/objects/Tylenol__c/fields/Physical_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>Physical_Address_Line_2__c</fullName>
    <label>Physical Address Line 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>