force-app/main/default/objects/Tylenol__c/fields/Relationship_with_Client__c.field-meta.xml
<CustomField>
    <fullName>Relationship_with_Client__c</fullName>
    <label>Relationship with Client</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>