force-app/main/default/objects/Tylenol__c/fields/Represented_by_Law_Firm__c.field-meta.xml
<CustomField>
    <fullName>Represented_by_Law_Firm__c</fullName>
    <label>Represented by Law Firm</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>