force-app/main/default/objects/Tylenol__c/fields/Specific_Diagnoses__c.field-meta.xml
<CustomField>
    <fullName>Specific_Diagnoses__c</fullName>
    <label>Specific Diagnoses</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Down Syndrome (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>