force-app/main/default/objects/Tylenol__c/fields/Substance_Use_During_Pregnancy__c.field-meta.xml
<CustomField>
    <fullName>Substance_Use_During_Pregnancy__c</fullName>
    <description>Did any of the following apply to you during your pregnancy?</description>
    <inlineHelpText>Did any of the following apply to you during your pregnancy?</inlineHelpText>
    <label>Substance Use During Pregnancy</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Did you use one or more SSRI drugs (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>