force-app/main/default/objects/Tylenol__c/fields/Trimester_of_Tylenol_Use__c.field-meta.xml
<CustomField>
    <fullName>Trimester_of_Tylenol_Use__c</fullName>
    <description>Approximately what trimester in your pregnancy did you take Tylenol (also  known as Acetaminophen or Paracetamol)?</description>
    <inlineHelpText>Approximately what trimester in your pregnancy did you take Tylenol (also  known as Acetaminophen or Paracetamol)?</inlineHelpText>
    <label>Trimester of Tylenol Use</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1st trimester (DNQ)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>