force-app/main/default/objects/Tylenol__c/fields/Tutoring_Therapy_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Tutoring_Therapy_Expenses__c</fullName>
    <label>Tutoring/Therapy Expenses</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>