force-app/main/default/objects/Tylenol__c/fields/Tylenol_Acetaminophen_Taken__c.field-meta.xml
<CustomField>
    <fullName>Tylenol_Acetaminophen_Taken__c</fullName>
    <description>When you took Tylenol/generic Acetaminophen, what did you normally take?</description>
    <label>Tylenol/Acetaminophen Taken</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>250mg (1 regular strength)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>