force-app/main/default/objects/Tylenol__c/fields/Tylenol_Brand__c.field-meta.xml
<CustomField>
    <fullName>Tylenol_Brand__c</fullName>
    <label>Tylenol Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tylenol Brand</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>