force-app/main/default/objects/Tylenol__c/fields/Type_of_Disorder__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Disorder__c</fullName>
    <label>Type of Disorder</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Autism Spectrum Disorder</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>