force-app/main/default/objects/Tylenol__c/fields/Your_Age_at_Baby_s_Birth__c.field-meta.xml
<CustomField>
    <fullName>Your_Age_at_Baby_s_Birth__c</fullName>
    <label>Your Age at Baby&apos;s Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>